# ScatterSync

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STYLEGUIDE.md
SampleFiles/: .SAMPLEgitignore  README.md
inc/: FileItem.hpp  FileList.hpp  GitControl.hpp  MainFrame.hpp  ManifestManip.hpp  Popups.hpp  ScatterSyncApp.hpp  ScatterSyncDefs.hpp  ScatterSyncErr.hpp  SettingsFrame.hpp  UserFileControl.hpp
src/: FileItem.cpp  FileList.cpp  GitControl.cpp  MainFrame.cpp  ManifestManip.cpp  ScatterSyncApp.cpp  SettingsFrame.cpp  UserFileControl.cpp
